[gd_scene load_steps=4 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/deck/banner/banner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/deck/banner/banner_editor.gd" type="Script" id=3]

[node name="BannerEditor" type="Panel"]
anchor_right = 1.0
margin_bottom = 320.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Banner" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -360.0
margin_top = -232.0
margin_right = 360.0
margin_bottom = -16.0

[node name="NameEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_top = 16.0
margin_right = 360.0
margin_bottom = 72.0
text = "デフォルトデッキ名がはいってるんじゃないの"

[connection signal="card_clicked" from="Banner" to="." method="_on_Banner_card_clicked"]
[connection signal="text_changed" from="NameEdit" to="." method="_on_NameEdit_text_changed"]
